syntax = "proto3";

package category;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import 'google/protobuf/struct.proto';

message Category {
  string id = 1;
  string name = 2;
  string slug = 3;
  string shortDescription = 4;
  string longDescription = 5;
  string thumbnail = 6;
  string backgroundUrl = 7;
  string parentId = 8;
  int32 sortOrder = 9;
  string metaKeywords = 10;
  bool limitedToLocations = 11;
  bool limitedToStores = 12;
  string taxCategory = 13;
  string status = 14;
  google.protobuf.Timestamp createdAt = 15;
  google.protobuf.Timestamp updatedAt = 16;
}

message Categories {
  repeated Category categories = 1;
}

message CategoryInput {
  string name = 1;
  string slug = 2;
  optional string shortDescription = 3;
  optional string longDescription = 4;
  optional string thumbnail = 5;
  optional string backgroundUrl = 6;
  optional string parentId = 7;
  optional int32 sortOrder = 8;
  optional string metaKeywords = 9;
  optional bool limitedToLocations = 10;
  optional bool limitedToStores = 11;
  optional string taxCategory = 12;
  optional string status = 13;
}

message CreateCategoryInput {
  CategoryInput data = 1;
}

message CreateManyCategoriesInput {
  repeated CategoryInput categories = 1;
}

message UpdateCategoryInput {
  string id = 1;
  CategoryInput data = 2;
}

message UpdateManyCategoriesInput {
  google.protobuf.Any filter = 1;
  CategoryInput update = 2;
}

message DeleteManyCategoriesInput {
  google.protobuf.Any filter = 1;
}

message NullableCategory {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Category data = 2;
  }
}